--- a/custom_components/trunk_recorder/manifest.json
+++ b/custom_components/trunk_recorder/manifest.json
@@ -3,9 +3,9 @@
   "name": "Trunk Recorder",
   "codeowners": ["@tsquared96"],
   "config_flow": true,
-  "dependencies": ["websocket_api"],
+  "dependencies": [],
   "documentation": "https://github.com/tsquared96/trunk_recorder",
   "iot_class": "local_polling",
-  "requirements": ["aiohttp>=3.8.0", "websocket-client>=1.4.0"],
-  "version": "1.0.0"
+  "requirements": [],
+  "version": "0.1.0"
 }
